updated new feats, pub kerner is worse

--- a/notebooks/xgb_ensemble-all.ipynb
+++ b/notebooks/xgb_ensemble-all.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [
     {
@@ -16,6 +16,7 @@
       "'../features/cnn_1_aug_skimage_preprocess_feat.pkl'\n",
       "'../features/cnn_1_feat.pkl'\n",
       "'../features/cnn_2_aug1_feat.pkl'\n",
+      "'../features/cnn_2_aug_1_fold8_feat.pkl'\n",
       "'../features/cnn_2_aug_denoise_preprocess_feat.pkl'\n",
       "'../features/cnn_2_aug_rescale_preprocess_feat.pkl'\n",
       "'../features/cnn_2_aug_skimage_preprocess_feat.pkl'\n",
@@ -44,10 +45,15 @@
       "'../features/incept_aug4_feat.pkl'\n",
       "'../features/other_feat.pkl'\n",
       "'../features/other_model_gbrt.pkl'\n",
+      "'../features/other_model_gbrt2.pkl'\n",
       "'../features/other_model_lgb.pkl'\n",
+      "'../features/other_model_lgb2.pkl'\n",
       "'../features/other_model_lr.pkl'\n",
+      "'../features/other_model_lr2.pkl'\n",
       "'../features/other_model_rf.pkl'\n",
+      "'../features/other_model_rf2.pkl'\n",
       "'../features/other_model_xgb.pkl'\n",
+      "'../features/other_model_xgb2.pkl'\n",
       "'../features/resnet_1_feat.pkl'\n",
       "'../features/resnet_aug1_feat.pkl'\n",
       "'../features/resnet_aug1_fold8_feat.pkl'\n",
@@ -76,14 +82,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(1604, 60) (8424, 60) (1604,)\n"
+      "(1604, 66) (8424, 66) (1604,)\n"
      ]
     }
    ],
@@ -107,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -195,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
    "metadata": {
     "scrolled": true
    },
@@ -204,40 +210,28 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0]\ttrain-logloss:0.636537\tvalid-logloss:0.640085\n",
+      "[0]\ttrain-logloss:0.635801\tvalid-logloss:0.640776\n",
       "Multiple eval metrics have been passed: 'valid-logloss' will be used for early stopping.\n",
       "\n",
       "Will train until valid-logloss hasn't improved in 20 rounds.\n",
       "Stopping. Best iteration:\n",
-      "[109]\ttrain-logloss:0.054487\tvalid-logloss:0.153324\n",
+      "[128]\ttrain-logloss:0.040565\tvalid-logloss:0.142919\n",
       "\n",
-      "[0]\ttrain-logloss:0.637354\tvalid-logloss:0.63967\n",
+      "[0]\ttrain-logloss:0.635878\tvalid-logloss:0.639922\n",
       "Multiple eval metrics have been passed: 'valid-logloss' will be used for early stopping.\n",
       "\n",
       "Will train until valid-logloss hasn't improved in 20 rounds.\n",
       "Stopping. Best iteration:\n",
-      "[145]\ttrain-logloss:0.043307\tvalid-logloss:0.151808\n",
+      "[85]\ttrain-logloss:0.064219\tvalid-logloss:0.158619\n",
       "\n",
-      "[0]\ttrain-logloss:0.636949\tvalid-logloss:0.638853\n",
+      "[0]\ttrain-logloss:0.637191\tvalid-logloss:0.640765\n",
       "Multiple eval metrics have been passed: 'valid-logloss' will be used for early stopping.\n",
       "\n",
       "Will train until valid-logloss hasn't improved in 20 rounds.\n",
       "Stopping. Best iteration:\n",
-      "[89]\ttrain-logloss:0.067788\tvalid-logloss:0.162308\n",
+      "[74]\ttrain-logloss:0.074564\tvalid-logloss:0.160003\n",
       "\n",
-      "local average valid loss 0.156237410478 val loss std 0.00436512207177\n",
-      "         id  is_iceberg\n",
-      "0  5941774d    0.014128\n",
-      "1  4023181e    0.951536\n",
-      "2  b20200e4    0.060790\n",
-      "3  e7f018bb    0.997920\n",
-      "4  4371c8c3    0.358972\n",
-      "         id  is_iceberg\n",
-      "0  5941774d    0.013871\n",
-      "1  4023181e    0.951023\n",
-      "2  b20200e4    0.059593\n",
-      "3  e7f018bb    0.997931\n",
-      "4  4371c8c3    0.359546\n"
+      "local average valid loss 0.156285246454 val loss std 0.00822491496104\n"
      ]
     }
    ],
@@ -247,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": null,
    "metadata": {
     "scrolled": true
    },
@@ -258,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": null,
    "metadata": {
     "scrolled": true
    },
@@ -269,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -278,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -287,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
