--- a/notebooks/xgb_ensemble.ipynb
+++ b/notebooks/xgb_ensemble.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [
     {
@@ -45,10 +45,15 @@
       "'../features/incept_aug4_feat.pkl',\n",
       "'../features/other_feat.pkl',\n",
       "'../features/other_model_gbrt.pkl',\n",
+      "'../features/other_model_gbrt2.pkl',\n",
       "'../features/other_model_lgb.pkl',\n",
+      "'../features/other_model_lgb2.pkl',\n",
       "'../features/other_model_lr.pkl',\n",
+      "'../features/other_model_lr2.pkl',\n",
       "'../features/other_model_rf.pkl',\n",
+      "'../features/other_model_rf2.pkl',\n",
       "'../features/other_model_xgb.pkl',\n",
+      "'../features/other_model_xgb2.pkl',\n",
       "'../features/resnet_1_feat.pkl',\n",
       "'../features/resnet_aug1_feat.pkl',\n",
       "'../features/resnet_aug1_fold8_feat.pkl',\n",
@@ -77,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [
     {
@@ -119,10 +124,15 @@
       "../features/incept_aug4_feat.pkl\n",
       "../features/other_feat.pkl\n",
       "../features/other_model_gbrt.pkl\n",
+      "../features/other_model_gbrt2.pkl\n",
       "../features/other_model_lgb.pkl\n",
+      "../features/other_model_lgb2.pkl\n",
       "../features/other_model_lr.pkl\n",
+      "../features/other_model_lr2.pkl\n",
       "../features/other_model_rf.pkl\n",
+      "../features/other_model_rf2.pkl\n",
       "../features/other_model_xgb.pkl\n",
+      "../features/other_model_xgb2.pkl\n",
       "../features/resnet_1_feat.pkl\n",
       "../features/resnet_aug1_feat.pkl\n",
       "../features/resnet_aug1_fold8_feat.pkl\n",
@@ -134,7 +144,7 @@
       "../features/vgg_aug1_fold8_feat.pkl\n",
       "../features/vgg_aug1_new_feat.pkl\n",
       "../features/xception_aug1_feat.pkl\n",
-      "(1604, 60) (8424, 60) (1604,)\n"
+      "(1604, 65) (8424, 65) (1604,)\n"
      ]
     }
    ],
@@ -176,10 +186,15 @@
     "'../features/incept_aug4_feat.pkl',\n",
     "'../features/other_feat.pkl',\n",
     "'../features/other_model_gbrt.pkl',\n",
+    "'../features/other_model_gbrt2.pkl',\n",
     "'../features/other_model_lgb.pkl',\n",
+    "'../features/other_model_lgb2.pkl',\n",
     "'../features/other_model_lr.pkl',\n",
+    "'../features/other_model_lr2.pkl',\n",
     "'../features/other_model_rf.pkl',\n",
+    "'../features/other_model_rf2.pkl',\n",
     "'../features/other_model_xgb.pkl',\n",
+    "'../features/other_model_xgb2.pkl',\n",
     "'../features/resnet_1_feat.pkl',\n",
     "'../features/resnet_aug1_feat.pkl',\n",
     "'../features/resnet_aug1_fold8_feat.pkl',\n",
@@ -214,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [
     {
@@ -302,7 +317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 94,
    "metadata": {
     "scrolled": false
    },
@@ -311,28 +326,28 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0]\ttrain-logloss:0.636864\tvalid-logloss:0.640368\n",
+      "[0]\ttrain-logloss:0.636051\tvalid-logloss:0.639897\n",
       "Multiple eval metrics have been passed: 'valid-logloss' will be used for early stopping.\n",
       "\n",
       "Will train until valid-logloss hasn't improved in 20 rounds.\n",
       "Stopping. Best iteration:\n",
-      "[99]\ttrain-logloss:0.059137\tvalid-logloss:0.154522\n",
+      "[117]\ttrain-logloss:0.046343\tvalid-logloss:0.149628\n",
       "\n",
-      "[0]\ttrain-logloss:0.637263\tvalid-logloss:0.639929\n",
+      "[0]\ttrain-logloss:0.636598\tvalid-logloss:0.639232\n",
       "Multiple eval metrics have been passed: 'valid-logloss' will be used for early stopping.\n",
       "\n",
       "Will train until valid-logloss hasn't improved in 20 rounds.\n",
       "Stopping. Best iteration:\n",
-      "[115]\ttrain-logloss:0.054016\tvalid-logloss:0.151296\n",
+      "[92]\ttrain-logloss:0.063647\tvalid-logloss:0.157304\n",
       "\n",
-      "[0]\ttrain-logloss:0.637835\tvalid-logloss:0.639815\n",
+      "[0]\ttrain-logloss:0.636864\tvalid-logloss:0.638841\n",
       "Multiple eval metrics have been passed: 'valid-logloss' will be used for early stopping.\n",
       "\n",
       "Will train until valid-logloss hasn't improved in 20 rounds.\n",
       "Stopping. Best iteration:\n",
-      "[83]\ttrain-logloss:0.069166\tvalid-logloss:0.156799\n",
+      "[70]\ttrain-logloss:0.076399\tvalid-logloss:0.158341\n",
       "\n",
-      "local average valid loss 0.155248854449 val loss std 0.00254279664839\n"
+      "local average valid loss 0.157166433634 val loss std 0.00349712555524\n"
      ]
     }
    ],
@@ -342,8 +357,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 95,
    "metadata": {
+    "collapsed": true,
     "scrolled": true
    },
    "outputs": [],
@@ -353,8 +369,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 96,
    "metadata": {
+    "collapsed": true,
     "scrolled": true
    },
    "outputs": [],
@@ -364,8 +381,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
-   "metadata": {},
+   "execution_count": 97,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#cv_test(3,233,True)"
@@ -373,8 +392,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
-   "metadata": {},
+   "execution_count": 98,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#cv_test(5,233,True)"
@@ -382,8 +403,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
-   "metadata": {},
+   "execution_count": 99,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#cv_test(10,233,True)"
