--- a/other_hand_features/other_models_from_hand_feats_v2.ipynb
+++ b/other_hand_features/other_models_from_hand_feats_v2.ipynb
@@ -41,11 +41,39 @@
     "import numpy as np\n",
     "import cv2\n",
     "from itertools import combinations\n",
+    "from scipy.stats import kurtosis, skew\n",
     "from scipy.ndimage import laplace, sobel\n",
     "\n",
-    "def get_img_feat(img):\n",
-    "    feats = [np.mean(img),np.std(img),np.median(img),np.max(img),np.min(img)]\n",
-    "    return feats\n",
+    "def get_feat_from_img(img_sub):\n",
+    "    bins = 20\n",
+    "    scl_min, scl_max = -50, 50\n",
+    "    st = []\n",
+    "    sub_st = []\n",
+    "    sub_st += [np.mean(img_sub), np.std(img_sub), np.max(img_sub), np.median(img_sub), np.min(img_sub)]\n",
+    "    sub_st += [(sub_st[2] - sub_st[3]), (sub_st[2] - sub_st[4]), (sub_st[3] - sub_st[4])] \n",
+    "    sub_st += [(sub_st[-3] / sub_st[1]), (sub_st[-2] / sub_st[1]), (sub_st[-1] / sub_st[1])] #normalized by stdev\n",
+    "    st += sub_st\n",
+    "    \n",
+    "    #Laplacian, Sobel, kurtosis and skewness\n",
+    "    st_trans = []\n",
+    "    st_trans += [laplace(img_sub, mode='reflect', cval=0.0).ravel().var()] #blurr\n",
+    "    sobel0 = sobel(img_sub, axis=0, mode='reflect', cval=0.0).ravel().var()\n",
+    "    sobel1 = sobel(img_sub, axis=1, mode='reflect', cval=0.0).ravel().var()\n",
+    "    st_trans += [sobel0, sobel1]\n",
+    "    st_trans += [kurtosis(img_sub.ravel()), skew(img_sub.ravel())]\n",
+    "\n",
+    "    #\n",
+    "    st += [x * y for x, y in combinations(st_trans, 2)]\n",
+    "    st += [x + y for x, y in combinations(st_trans, 2)]\n",
+    "    st += [x - y for x, y in combinations(st_trans, 2)]                \n",
+    "\n",
+    "    #hist\n",
+    "    #hist = list(cv2.calcHist([img], [i], None, [bins], [0., 1.]).flatten())\n",
+    "    hist = list(np.histogram(img_sub, bins=bins, range=(scl_min, scl_max))[0])\n",
+    "    st += hist\n",
+    "    st += [hist.index(max(hist))] #only the smallest index w/ max value would be incl\n",
+    "    st += [np.std(hist), np.max(hist), np.median(hist), (np.max(hist) - np.median(hist))]\n",
+    "    return st\n",
     "    \n",
     "def get_other_feat(df):\n",
     "    feats = []\n",
@@ -53,39 +81,13 @@
     "        tmp_feat = []\n",
     "        img1 = np.array(row['band_1']).reshape(75, 75).astype('float32')\n",
     "        img2 = np.array(row['band_2']).reshape(75, 75).astype('float32')\n",
+    "        img3 = (img1+img2)/2\n",
     "        if row['inc_angle'] == 'na':\n",
-    "            ang = 0\n",
+    "            ang = -1\n",
     "        else:\n",
     "            ang = float(row['inc_angle'])\n",
     "            \n",
-    "        # base\n",
-    "        st_trans = get_img_feat(img1) + get_img_feat(img2) + [ang] \n",
-    "        tmp_feat += st_trans\n",
-    "        tmp_feat += [x * y for x, y in combinations(st_trans, 2)]\n",
-    "        tmp_feat += [x + y for x, y in combinations(st_trans, 2)]\n",
-    "        tmp_feat += [x - y for x, y in combinations(st_trans, 2)]\n",
-    "        \n",
-    "        # lap\n",
-    "        lap_1 = laplace(img1, mode='reflect', cval=0.0)\n",
-    "        lap_2 = laplace(img2, mode='reflect', cval=0.0)\n",
-    "        st_trans = get_img_feat(lap_1) + get_img_feat(lap_2)\n",
-    "        \n",
-    "        # sob\n",
-    "        sob1 = sobel(img1, axis=0, mode='reflect', cval=0.0)\n",
-    "        sob2 = sobel(img1, axis=1, mode='reflect', cval=0.0)\n",
-    "        sob3 = sobel(img2, axis=0, mode='reflect', cval=0.0)\n",
-    "        sob4 = sobel(img2, axis=1, mode='reflect', cval=0.0)\n",
-    "        st_trans = st_trans + get_img_feat(sob1) + get_img_feat(sob2) + get_img_feat(sob3) + get_img_feat(sob4)\n",
-    "        tmp_feat += st_trans\n",
-    "        \n",
-    "        # hist\n",
-    "        hist = list(np.histogram(img1, bins=20)[0])\n",
-    "        tmp_feat += hist\n",
-    "        tmp_feat += [np.std(hist), np.max(hist), np.median(hist), (np.max(hist) - np.median(hist))]\n",
-    "        \n",
-    "        hist = list(np.histogram(img2, bins=20)[0])\n",
-    "        tmp_feat += hist\n",
-    "        tmp_feat += [np.std(hist), np.max(hist), np.median(hist), (np.max(hist) - np.median(hist))]\n",
+    "        tmp_feat = get_feat_from_img(img1) + get_feat_from_img(img2) + get_feat_from_img(img3) + [ang]\n",
     "        feats.append(tmp_feat)\n",
     "        \n",
     "    return np.array(feats).astype('float32')\n",
@@ -103,7 +105,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(1604, 254) (8424, 254)\n"
+      "(1604, 199) (8424, 199)\n"
      ]
     }
    ],
@@ -187,17 +189,17 @@
       "          intercept_scaling=1, max_iter=100, multi_class='ovr', n_jobs=1,\n",
       "          penalty='l2', random_state=None, solver='liblinear', tol=0.0001,\n",
       "          verbose=0, warm_start=False)\n",
-      "this fold train loss 0.180966323624 val loss 0.329216192016\n",
+      "this fold train loss 0.150262123761 val loss 0.28825628492\n",
       "============================\n",
-      "this fold train loss 0.188142816379 val loss 0.285170914233\n",
+      "this fold train loss 0.170058937695 val loss 0.235593068118\n",
       "============================\n",
-      "this fold train loss 0.20906384857 val loss 0.220144765721\n",
+      "this fold train loss 0.166186963664 val loss 0.188479565374\n",
       "============================\n",
-      "this fold train loss 0.182953303423 val loss 0.341894300145\n",
+      "this fold train loss 0.163442099747 val loss 0.362230491392\n",
       "============================\n",
-      "this fold train loss 0.177372438065 val loss 0.374177912546\n",
+      "this fold train loss 0.158448607177 val loss 0.254202857795\n",
       "============================\n",
-      "all avg 0.187699746012 0.310120816932\n"
+      "all avg 0.161679746409 0.26575245352\n"
      ]
     }
    ],
@@ -206,13 +208,13 @@
     "from sklearn.linear_model import LogisticRegression\n",
     "lr_train,lr_pred = cv_feat(LogisticRegression,fold_cnt=5,params={'C':2.0,'max_iter':100})\n",
     "import pickle\n",
-    "with open('../features/other_model_lr.pkl','wb') as fout:\n",
+    "with open('../features/other_model_lr2.pkl','wb') as fout:\n",
     "    pickle.dump([lr_train,lr_pred],fout)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -225,17 +227,17 @@
       "            min_samples_leaf=1, min_samples_split=2,\n",
       "            min_weight_fraction_leaf=0.0, n_estimators=50, n_jobs=1,\n",
       "            oob_score=False, random_state=42, verbose=0, warm_start=False)\n",
-      "this fold train loss 0.135653483359 val loss 0.311216376663\n",
+      "this fold train loss 0.117361609549 val loss 0.284550498281\n",
       "============================\n",
-      "this fold train loss 0.133297060247 val loss 0.311198371769\n",
+      "this fold train loss 0.114624747072 val loss 0.290099689673\n",
       "============================\n",
-      "this fold train loss 0.133823272904 val loss 0.263660888302\n",
+      "this fold train loss 0.124820530995 val loss 0.27762039581\n",
       "============================\n",
-      "this fold train loss 0.132259572624 val loss 0.291543367585\n",
+      "this fold train loss 0.112714923692 val loss 0.274965110068\n",
       "============================\n",
-      "this fold train loss 0.13219652879 val loss 0.312446838588\n",
+      "this fold train loss 0.119268526755 val loss 0.298419272298\n",
       "============================\n",
-      "all avg 0.133445983585 0.298013168581\n"
+      "all avg 0.117758067613 0.285130993226\n"
      ]
     }
    ],
@@ -247,13 +249,13 @@
     "    'random_state':42\n",
     "}\n",
     "lr_train,lr_pred = cv_feat(RandomForestClassifier,fold_cnt=5,params=tmp_params)\n",
-    "with open('../features/other_model_rf.pkl','wb') as fout:\n",
+    "with open('../features/other_model_rf2.pkl','wb') as fout:\n",
     "    pickle.dump([lr_train,lr_pred],fout)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {
     "collapsed": true
    },
@@ -271,7 +273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -286,17 +288,17 @@
       "              min_weight_fraction_leaf=0.0, n_estimators=200,\n",
       "              presort='auto', random_state=42, subsample=1.0, verbose=0,\n",
       "              warm_start=False)\n",
-      "this fold train loss 0.0461023351939 val loss 0.276414295972\n",
+      "this fold train loss 0.0454135956711 val loss 0.237516215916\n",
       "============================\n",
-      "this fold train loss 0.0462700352087 val loss 0.226782313074\n",
+      "this fold train loss 0.0487403695001 val loss 0.240573039121\n",
       "============================\n",
-      "this fold train loss 0.0501460697509 val loss 0.177643602599\n",
+      "this fold train loss 0.0498461610381 val loss 0.211853511021\n",
       "============================\n",
-      "this fold train loss 0.0405660354358 val loss 0.225972714838\n",
+      "this fold train loss 0.0448649362767 val loss 0.201027198467\n",
       "============================\n",
-      "this fold train loss 0.0420577994417 val loss 0.253901706754\n",
+      "this fold train loss 0.0450830963909 val loss 0.252077266824\n",
       "============================\n",
-      "all avg 0.0450284550062 0.232142926647\n"
+      "all avg 0.0467896317754 0.22860944627\n"
      ]
     }
    ],
@@ -307,13 +309,13 @@
     "    'random_state':42,\n",
     "}\n",
     "lr_train,lr_pred = cv_feat(GradientBoostingClassifier,fold_cnt=5,params=tmp_params)\n",
-    "with open('../features/other_model_gbrt.pkl','wb') as fout:\n",
+    "with open('../features/other_model_gbrt2.pkl','wb') as fout:\n",
     "    pickle.dump([lr_train,lr_pred],fout)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -326,17 +328,17 @@
       "       n_jobs=1, nthread=None, objective='binary:logistic', random_state=0,\n",
       "       reg_alpha=0, reg_lambda=1, scale_pos_weight=1, seed=None,\n",
       "       silent=True, subsample=1)\n",
-      "this fold train loss 0.0449788980772 val loss 0.273746081482\n",
+      "this fold train loss 0.0470813498795 val loss 0.232911134502\n",
       "============================\n",
-      "this fold train loss 0.0476104208943 val loss 0.237838637325\n",
+      "this fold train loss 0.0491627649343 val loss 0.236815817551\n",
       "============================\n",
-      "this fold train loss 0.0492733710688 val loss 0.175999403349\n",
+      "this fold train loss 0.0530640187421 val loss 0.19998797233\n",
       "============================\n",
-      "this fold train loss 0.0444674012068 val loss 0.222329032978\n",
+      "this fold train loss 0.0501395934692 val loss 0.207976929297\n",
       "============================\n",
-      "this fold train loss 0.0417808146803 val loss 0.258001860328\n",
+      "this fold train loss 0.0463526003241 val loss 0.240199753553\n",
       "============================\n",
-      "all avg 0.0456221811855 0.233583003093\n"
+      "all avg 0.0491600654698 0.223578321447\n"
      ]
     }
    ],
@@ -349,13 +351,13 @@
     "    \n",
     "}\n",
     "lr_train,lr_pred = cv_feat(XGBClassifier,fold_cnt=5,params=tmp_params)\n",
-    "with open('../features/other_model_xgb.pkl','wb') as fout:\n",
+    "with open('../features/other_model_xgb2.pkl','wb') as fout:\n",
     "    pickle.dump([lr_train,lr_pred],fout)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "metadata": {
     "scrolled": false
    },
@@ -364,8 +366,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "LGBMClassifier(boosting_type='gbdt', colsample_bytree=1.0, learning_rate=0.1,\n",
-      "        max_bin=255, max_depth=3, min_child_samples=20,\n",
+      "LGBMClassifier(boosting='dart', boosting_type='gbdt', colsample_bytree=1.0,\n",
+      "        learning_rate=0.1, max_bin=255, max_depth=3, min_child_samples=20,\n",
       "        min_child_weight=0.001, min_split_gain=0.0, n_estimators=200,\n",
       "        n_jobs=-1, num_leaves=31, objective=None, random_state=None,\n",
       "        reg_alpha=0.0, reg_lambda=0.0, silent=True, subsample=1.0,\n",
@@ -386,7 +388,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "this fold train loss 0.0377554572441 val loss 0.275012603487\n",
+      "this fold train loss 0.0415159842129 val loss 0.229851511384\n",
       "============================\n"
      ]
     },
@@ -404,7 +406,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "this fold train loss 0.0432435846384 val loss 0.246748842208\n",
+      "this fold train loss 0.0454491325444 val loss 0.240340455722\n",
       "============================\n"
      ]
     },
@@ -422,7 +424,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "this fold train loss 0.0463302324343 val loss 0.175802338359\n",
+      "this fold train loss 0.0482162248667 val loss 0.197131015262\n",
       "============================\n"
      ]
     },
@@ -440,7 +442,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "this fold train loss 0.0398835506922 val loss 0.221377169162\n",
+      "this fold train loss 0.0458085955759 val loss 0.21564618552\n",
       "============================\n"
      ]
     },
@@ -458,9 +460,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "this fold train loss 0.0382147769205 val loss 0.26299724135\n",
+      "this fold train loss 0.042941952219 val loss 0.25154883846\n",
       "============================\n",
-      "all avg 0.0410855203859 0.236387638913\n"
+      "all avg 0.0447863778838 0.22690360127\n"
      ]
     }
    ],
@@ -468,10 +470,11 @@
     "from lightgbm import LGBMClassifier\n",
     "tmp_params = {\n",
     "    'max_depth':3,  \n",
-    "    'n_estimators':200\n",
+    "    'n_estimators':200,\n",
+    "    'boosting':'dart'\n",
     "}\n",
     "lr_train,lr_pred = cv_feat(LGBMClassifier,fold_cnt=5,params=tmp_params)\n",
-    "with open('../features/other_model_lgb.pkl','wb') as fout:\n",
+    "with open('../features/other_model_lgb2.pkl','wb') as fout:\n",
     "    pickle.dump([lr_train,lr_pred],fout)"
    ]
   }
